--- a/app/src/main/res/layout/activity_events_admin.xml
+++ b/app/src/main/res/layout/activity_events_admin.xml
@@ -7,32 +7,14 @@
     android:layout_height="match_parent"
     tools:context=".EventsAdminActivity">
 
-    <Button
-        android:id="@+id/deleteAllBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Eliminar "
-        app:layout_constraintTop_toBottomOf="@+id/goEventBtn"
-        tools:layout_editor_absoluteX="0dp" />
-
-    <Button
-        android:id="@+id/goEventBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:text="ir a eventos"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
-
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/goEventBtn"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvEventosHome"
         app:srcCompat="@mipmap/calendario" />
@@ -45,7 +27,7 @@
         android:layout_marginTop="64dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="42dp"
-        android:text="Eventos Home"
+        android:text="Holi, entraste"
         android:textSize="25dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView3"
         app:layout_constraintEnd_toEndOf="parent"
